Added custom expectation for data validation with Great Expectations

--- a/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
+++ b/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
@@ -17,11 +17,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'great_expectations.dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PandasDataset\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Load a sample DataFrame\u001b[39;00m\n\u001b[1;32m      6\u001b[0m data \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m25\u001b[39m, \u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m35\u001b[39m, \u001b[38;5;241m40\u001b[39m, \u001b[38;5;241m45\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mincome\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m50000\u001b[39m, \u001b[38;5;241m60000\u001b[39m, \u001b[38;5;241m75000\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m100000\u001b[39m]}\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'great_expectations.dataset'"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "import great_expectations as ge\n",
+    "from great_expectations.dataset import PandasDataset\n",
+    "\n",
+    "# Load a sample DataFrame\n",
+    "data = {'age': [25, 30, 35, 40, 45], 'income': [50000, 60000, 75000, None, 100000]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Convert pandas DataFrame to Great Expectations dataset\n",
+    "ge_df = ge.from_pandas(df)\n",
+    "\n",
+    "# Create a custom expectation to check if 'age' is greater than or equal to 18\n",
+    "def expect_age_greater_than_18(self):\n",
+    "    return self.expect_column_values_to_be_in_set(\"age\", set(range(18, 120)))\n",
+    "\n",
+    "# Register the custom expectation\n",
+    "PandasDataset.expect_age_greater_than_18 = expect_age_greater_than_18\n",
+    "\n",
+    "# Validate the DataFrame using the custom expectation\n",
+    "result = ge_df.expect_age_greater_than_18()\n",
+    "\n",
+    "# Print the validation results\n",
+    "print(result)\n"
    ]
   },
   {
@@ -36,9 +70,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'great_expectations.dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PandasDataset\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msmtplib\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01memail\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MIMEText\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'great_expectations.dataset'"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import great_expectations as ge\n",
+    "from great_expectations.dataset import PandasDataset\n",
+    "import smtplib\n",
+    "from email.mime.text import MIMEText\n",
+    "\n",
+    "# Function to send an email alert\n",
+    "def send_email_alert(message):\n",
+    "    from_email = \"your_email@example.com\"\n",
+    "    to_email = \"recipient_email@example.com\"\n",
+    "    msg = MIMEText(message)\n",
+    "    msg[\"Subject\"] = \"Data Quality Alert\"\n",
+    "    msg[\"From\"] = from_email\n",
+    "    msg[\"To\"] = to_email\n",
+    "\n",
+    "    try:\n",
+    "        with smtplib.SMTP('smtp.example.com') as server:  # Use your SMTP server\n",
+    "            server.login('your_email@example.com', 'your_password')  # Login to SMTP server\n",
+    "            server.sendmail(from_email, to_email, msg.as_string())\n",
+    "        print(\"Alert sent successfully!\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to send alert: {e}\")\n",
+    "\n",
+    "# Load a sample DataFrame\n",
+    "data = {'age': [25, 30, 35, 40, 45], 'income': [50000, 60000, 75000, None, 100000]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Convert pandas DataFrame to Great Expectations dataset\n",
+    "ge_df = ge.from_pandas(df)\n",
+    "\n",
+    "# Check if there are any missing values in the 'income' column\n",
+    "if ge_df['income'].isnull().any():\n",
+    "    # Send an email alert if missing data is found\n",
+    "    send_email_alert(\"Data Quality Alert: Missing values found in the 'income' column.\")\n",
+    "else:\n",
+    "    print(\"Data Quality Check Passed: No missing values in 'income'.\")\n"
    ]
   },
   {
@@ -53,21 +135,69 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'great_expectations.dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PandasDataset\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Function to simulate real-time data monitoring\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'great_expectations.dataset'"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import great_expectations as ge\n",
+    "from great_expectations.dataset import PandasDataset\n",
+    "import time\n",
+    "\n",
+    "# Function to simulate real-time data monitoring\n",
+    "def real_time_data_quality_check(df):\n",
+    "    ge_df = ge.from_pandas(df)\n",
+    "\n",
+    "    # Define a basic check to see if the 'income' column contains missing values\n",
+    "    result = ge_df.expect_column_values_to_be_in_set('income', set(range(0, 1000000)))\n",
+    "\n",
+    "    if result['success'] == False:\n",
+    "        print(\"Data Quality Issue Detected! Missing or invalid values found in the 'income' column.\")\n",
+    "    else:\n",
+    "        print(\"Data Quality Check Passed.\")\n",
+    "\n",
+    "# Simulate real-time data monitoring\n",
+    "while True:\n",
+    "    # Sample Data (This could be dynamically loaded in real-time)\n",
+    "    data = {'age': [25, 30, 35, 40, 45], 'income': [50000, 60000, 75000, None, 100000]}\n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    # Perform a real-time data quality check\n",
+    "    real_time_data_quality_check(df)\n",
+    "    \n",
+    "    # Sleep for 5 seconds before checking again (simulate real-time monitoring)\n",
+    "    time.sleep(5)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
