Added custom expectation for data validation with Great Expectations

--- a/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
+++ b/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ExpectationConfiguration' from 'great_expectations.core' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/core/__init__.py)",
+     "ename": "AttributeError",
+     "evalue": "module 'great_expectations' has no attribute 'from_pandas'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01memail\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmultipart\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MIMEMultipart\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ExpectationConfiguration\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Task 1: Custom Expectation using Great Expectations\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Sample DataFrame\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ExpectationConfiguration' from 'great_expectations.core' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/core/__init__.py)"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Create a Great Expectations dataframe\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m ge_df \u001b[38;5;241m=\u001b[39m \u001b[43mge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas\u001b[49m(df)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Use Great Expectations' built-in expectation for age\u001b[39;00m\n\u001b[1;32m     18\u001b[0m ge_df\u001b[38;5;241m.\u001b[39mexpect_column_values_to_be_between(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m18\u001b[39m, \u001b[38;5;241m120\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'great_expectations' has no attribute 'from_pandas'"
      ]
     }
    ],
@@ -38,7 +38,6 @@
     "from email.mime.text import MIMEText\n",
     "from email.mime.multipart import MIMEMultipart\n",
     "import great_expectations as ge\n",
-    "from great_expectations.core import ExpectationConfiguration\n",
     "import time\n",
     "\n",
     "# Task 1: Custom Expectation using Great Expectations\n",
@@ -127,117 +126,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'great_expectations.dataset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PandasDataset\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msmtplib\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01memail\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MIMEText\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'great_expectations.dataset'"
-     ]
-    }
-   ],
-   "source": [
-    "# Write your code from here\n",
-    "import pandas as pd\n",
-    "import great_expectations as ge\n",
-    "from great_expectations.dataset import PandasDataset\n",
-    "import smtplib\n",
-    "from email.mime.text import MIMEText\n",
-    "\n",
-    "# Function to send an email alert\n",
-    "def send_email_alert(message):\n",
-    "    from_email = \"your_email@example.com\"\n",
-    "    to_email = \"recipient_email@example.com\"\n",
-    "    msg = MIMEText(message)\n",
-    "    msg[\"Subject\"] = \"Data Quality Alert\"\n",
-    "    msg[\"From\"] = from_email\n",
-    "    msg[\"To\"] = to_email\n",
-    "\n",
-    "    try:\n",
-    "        with smtplib.SMTP('smtp.example.com') as server:  # Use your SMTP server\n",
-    "            server.login('your_email@example.com', 'your_password')  # Login to SMTP server\n",
-    "            server.sendmail(from_email, to_email, msg.as_string())\n",
-    "        print(\"Alert sent successfully!\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Failed to send alert: {e}\")\n",
-    "\n",
-    "# Load a sample DataFrame\n",
-    "data = {'age': [25, 30, 35, 40, 45], 'income': [50000, 60000, 75000, None, 100000]}\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Convert pandas DataFrame to Great Expectations dataset\n",
-    "ge_df = ge.from_pandas(df)\n",
-    "\n",
-    "# Check if there are any missing values in the 'income' column\n",
-    "if ge_df['income'].isnull().any():\n",
-    "    # Send an email alert if missing data is found\n",
-    "    send_email_alert(\"Data Quality Alert: Missing values found in the 'income' column.\")\n",
-    "else:\n",
-    "    print(\"Data Quality Check Passed: No missing values in 'income'.\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Task 3: Real-time Data Quality Monitoring with Python and Great Expectations\n",
     "**Description**: Implement a system that monitors data quality in real-time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'great_expectations.dataset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PandasDataset\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Function to simulate real-time data monitoring\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'great_expectations.dataset'"
-     ]
-    }
-   ],
-   "source": [
-    "# Write your code from here\n",
-    "import pandas as pd\n",
-    "import great_expectations as ge\n",
-    "from great_expectations.dataset import PandasDataset\n",
-    "import time\n",
-    "\n",
-    "# Function to simulate real-time data monitoring\n",
-    "def real_time_data_quality_check(df):\n",
-    "    ge_df = ge.from_pandas(df)\n",
-    "\n",
-    "    # Define a basic check to see if the 'income' column contains missing values\n",
-    "    result = ge_df.expect_column_values_to_be_in_set('income', set(range(0, 1000000)))\n",
-    "\n",
-    "    if result['success'] == False:\n",
-    "        print(\"Data Quality Issue Detected! Missing or invalid values found in the 'income' column.\")\n",
-    "    else:\n",
-    "        print(\"Data Quality Check Passed.\")\n",
-    "\n",
-    "# Simulate real-time data monitoring\n",
-    "while True:\n",
-    "    # Sample Data (This could be dynamically loaded in real-time)\n",
-    "    data = {'age': [25, 30, 35, 40, 45], 'income': [50000, 60000, 75000, None, 100000]}\n",
-    "    df = pd.DataFrame(data)\n",
-    "\n",
-    "    # Perform a real-time data quality check\n",
-    "    real_time_data_quality_check(df)\n",
-    "    \n",
-    "    # Sleep for 5 seconds before checking again (simulate real-time monitoring)\n",
-    "    time.sleep(5)\n"
    ]
   }
  ],
