Updated Ques_2.ipynb with anomaly detection code11

--- a/src/Module 11/Hands-on - AI-Based Data Quality & Real-Time Monitoring/Ques_1.ipynb
+++ b/src/Module 11/Hands-on - AI-Based Data Quality & Real-Time Monitoring/Ques_1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -31,49 +31,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Results saved to 'detected_anomalies.csv'\n"
+      "✅ Results saved to 'detected_anomalies.csv'\n",
+      "✅ All tests passed.\n"
      ]
     }
    ],
    "source": [
-    "# Step 1: Import required libraries\n",
+    "# Step 1: Import Libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
-    "# Set Seaborn style\n",
+    "# Optional: Better plot style\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "# Step 2: Generate synthetic financial transaction data\n",
+    "# Step 2: Configuration dictionary\n",
+    "CONFIG = {\n",
+    "    \"contamination\": 0.02,\n",
+    "    \"output_file\": \"detected_anomalies.csv\",\n",
+    "    \"random_state\": 42\n",
+    "}\n",
+    "\n",
+    "# Step 3: Generate Synthetic Financial Transaction Data\n",
     "def generate_transaction_data():\n",
-    "    np.random.seed(42)\n",
-    "    \n",
-    "    # Generate normal transaction amounts and timestamps\n",
+    "    np.random.seed(CONFIG[\"random_state\"])\n",
+    "\n",
+    "    # Generate normal transactions\n",
     "    normal_amounts = np.random.normal(loc=100, scale=15, size=490)\n",
-    "    normal_times = np.random.normal(loc=12, scale=2, size=490)  # e.g., 12 PM average\n",
-    "    \n",
+    "    normal_times = np.random.normal(loc=12, scale=2, size=490)  # hours of day\n",
+    "\n",
     "    # Generate anomalies\n",
     "    anomaly_amounts = np.random.uniform(low=250, high=500, size=10)\n",
     "    anomaly_times = np.random.uniform(low=0, high=24, size=10)\n",
-    "    \n",
-    "    # Combine\n",
-    "    amounts = np.concatenate([normal_amounts, anomaly_amounts])\n",
-    "    times = np.concatenate([normal_times, anomaly_times])\n",
-    "    \n",
-    "    # Create DataFrame\n",
+    "\n",
+    "    # Combine data\n",
+    "    all_amounts = np.concatenate([normal_amounts, anomaly_amounts])\n",
+    "    all_times = np.concatenate([normal_times, anomaly_times])\n",
+    "\n",
     "    df = pd.DataFrame({\n",
-    "        'TransactionAmount': amounts,\n",
-    "        'TransactionTime': times\n",
+    "        'TransactionAmount': all_amounts,\n",
+    "        'TransactionTime': all_times\n",
     "    })\n",
-    "    \n",
+    "\n",
+    "    # Validate data\n",
+    "    if df.isnull().any().any():\n",
+    "        raise ValueError(\"Generated data contains NaNs.\")\n",
+    "\n",
     "    return df\n",
     "\n",
-    "# Step 3: Apply Isolation Forest for anomaly detection\n",
+    "# Step 4: Apply Isolation Forest to detect anomalies\n",
     "def detect_anomalies(df):\n",
     "    try:\n",
-    "        model = IsolationForest(contamination=0.02, random_state=42)\n",
+    "        model = IsolationForest(contamination=CONFIG[\"contamination\"], random_state=CONFIG[\"random_state\"])\n",
     "        df['Anomaly'] = model.fit_predict(df[['TransactionAmount', 'TransactionTime']])\n",
     "        df['Anomaly'] = df['Anomaly'].map({1: 0, -1: 1})  # 0 = normal, 1 = anomaly\n",
     "        return df\n",
@@ -81,7 +92,7 @@
     "        print(f\"❌ Error during model fitting: {e}\")\n",
     "        return df\n",
     "\n",
-    "# Step 4: Plot the anomalies\n",
+    "# Step 5: Visualize the anomalies\n",
     "def plot_anomalies(df):\n",
     "    try:\n",
     "        plt.figure(figsize=(10, 6))\n",
@@ -101,22 +112,42 @@
     "    except Exception as e:\n",
     "        print(f\"❌ Error during plotting: {e}\")\n",
     "\n",
-    "# Step 5: Save to CSV with error handling\n",
-    "def save_results(df, filename=\"detected_anomalies.csv\"):\n",
+    "# Step 6: Save results to CSV\n",
+    "def save_results(df, filename):\n",
     "    try:\n",
     "        df.to_csv(filename, index=False)\n",
     "        print(f\"✅ Results saved to '{filename}'\")\n",
     "    except Exception as e:\n",
     "        print(f\"❌ Error saving file: {e}\")\n",
     "\n",
-    "# Step 6: Run the full pipeline\n",
+    "# Step 7: Unit Tests to Validate Logic\n",
+    "def test_generate_transaction_data():\n",
+    "    df = generate_transaction_data()\n",
+    "    assert not df.empty, \"DataFrame is empty.\"\n",
+    "    assert df.isnull().sum().sum() == 0, \"Data contains NaNs.\"\n",
+    "    assert 'TransactionAmount' in df.columns, \"Missing 'TransactionAmount' column.\"\n",
+    "    assert df['TransactionAmount'].dtype in ['float64', 'int64'], \"TransactionAmount must be numeric.\"\n",
+    "\n",
+    "def test_anomaly_detection():\n",
+    "    df = generate_transaction_data()\n",
+    "    df = detect_anomalies(df)\n",
+    "    anomalies = df['Anomaly'].sum()\n",
+    "    assert anomalies > 0, \"No anomalies detected. Check contamination parameter.\"\n",
+    "    assert 'Anomaly' in df.columns, \"'Anomaly' column not found.\"\n",
+    "\n",
+    "# Step 8: Main Function\n",
     "def main():\n",
     "    df = generate_transaction_data()\n",
     "    df = detect_anomalies(df)\n",
     "    plot_anomalies(df)\n",
-    "    save_results(df)\n",
+    "    save_results(df, CONFIG[\"output_file\"])\n",
     "\n",
-    "# Execute the pipeline\n",
+    "    # Run tests\n",
+    "    test_generate_transaction_data()\n",
+    "    test_anomaly_detection()\n",
+    "    print(\"✅ All tests passed.\")\n",
+    "\n",
+    "# Execute\n",
     "main()\n"
    ]
   },
@@ -134,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
